--- a/Part3/phonebook-backend/package.json
+++ b/Part3/phonebook-backend/package.json
@@ -4,14 +4,15 @@
   "description": "Backend built for thephonebook in Part 2",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "Srinivas Ilancheran",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
